--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Jeff Dickey @jdxcode",
   "devDependencies": {
     "eslint": "^4.15.0",
-    "eslint-config-dxcli": "^1.1.4",
+    "eslint-config-anycli": "^1.3.0",
     "fs-extra": "^5.0.0",
     "handlebars": "^4.0.11",
     "husky": "^0.14.3",
